added new style elements, photos, and attributes

--- a/HTML-practice/new.html
+++ b/HTML-practice/new.html
@@ -10,14 +10,19 @@
         Top
     </h1>
     <p>The cream resides here</p>
-    <h2>
+    <div>
+    <h2 style="text-align: center;">
         Middle
     </h2>
-    <p>Some say there is a pack</p>
+    </div>
+    <p style="text-align: center;">Some say there is a pack</p>
 
-    <footer>
+    <footer style="text-align: right;font-size: medium;">
         Bottom
         <p>At the foot there is the metatarsophalangeal.</p>
+        <a href="main.html"> Main </a>
+        <img src="./images/3044353793_e5d0ab7a66_w.jpg" alt="Schnitzel Hound" height="500" width="400">
+        <img src="https://live.staticflickr.com/3208/3044353793_e5d0ab7a66_w.jpg" alt="Schnitzel Hound" height="300" width="400" style="text-align: left;">
     </footer>
 </body>
 </html>
