--- a/practice/w3-html-tutorial-1.htm
+++ b/practice/w3-html-tutorial-1.htm
@@ -16,5 +16,11 @@
         <p><a href="file:///C:/Users/datrij/Documents/GitHub/Instantutor-Onboarding/practice/w3-html-tutorial-1.htm">This is a self referential link</a></p>
 
         <img src="dog.png" alt="My Baby Boy" width="200" height="250">
+
+        <br>
+
+        <p>Line Break <br> here.</p>
+
+        <p style="color:rgb(255, 0, 0);"> Used the style command here</p>
     </body>
 </html>
