Creating a css style file
I'm making a CSS style file as a part of the html/css tutorial I am completing.

--- a/practice/w3-html-tutorial-1.htm
+++ b/practice/w3-html-tutorial-1.htm
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
+    <head>
+        <link rel="stylesheet" href="CSS_tutorial_file.css">
+    </head>
     <body>
 
         <h1>My First Heading</h1>
