--- a/practice/w3-html-tutorial-1.htm
+++ b/practice/w3-html-tutorial-1.htm
@@ -5,14 +5,16 @@
     </head>
     <body>
 
+        <!-- This is a comment -->
+
         <h1>My First Heading</h1>
 
         <p>My first paragraph.</p>
 
-        <h1>This is heading 1</h1>
+        <h1 class="right">This is heading 1</h1>
         <h2>This is heading 2</h2>
         <h3>This is heading 3</h3>
-        <h4>This is heading 4</h4>
+        <h4 class="right">This is heading 4</h4>
         <h5>This is heading 5</h5>
         <h6>This is heading 6</h6>
 
